@@ -25,6 +25,7 @@ usermodmap=$HOME/.Xmodmap
 userxkbmap=$HOME/.Xkbmap
 
 sysresources=/etc/X11/Xresources 
+xdmsysresources=/etc/X11/xdm/Xresources 
 sysmodmap=/etc/X11/Xmodmap 
 sysxkbmap=/etc/X11/Xkbmap
 
@@ -35,6 +36,10 @@ rh6sysmodmap=/etc/X11/xinit/Xmodmap
 # merge in defaults
 if [ -f "$rh6sysresources" ]; then
     xrdb -merge "$rh6sysresources"
+fi
+
+if [ -f "$xdmsysresources" ]; then
+    xrdb -merge "$xdmsysresources"
 fi
 
 if [ -f "$sysresources" ]; then
