@@ -1,3 +1,8 @@
+Tue Jul 23 07:47:11 2002  George Lebl <jirka@5z.com>
+
+	* config/Gnome.in, config/Xsession: read the xdm Xresources file as
+	  well since that's where it is in rh nowdays as it seems.
+
 Mon Jul 22 16:45:43 2002  George Lebl <jirka@5z.com>
 
 	* daemon/slave.c: add a hack to fix #64662.  When
